Small fix on video slide to ensure heading doesn't slip behind yellow block.

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -41,6 +41,9 @@ $spacing: 20px;
       background-position: center;
     }
     .slide-video {
+      @include media('>=wide') {
+        max-height: 536px;
+      }
       // height: 0;
       // width: 100%;
       // padding-bottom: 42%;
@@ -105,7 +108,7 @@ $spacing: 20px;
           }
           &:hover {
             p {
-              display: inline=block;
+              display: inline;
               background-color: rgba(255, 255, 255, 0.3);
               &:before {
                 content: '\00a0';
